--- a/FitApp/package.json
+++ b/FitApp/package.json
@@ -4,10 +4,10 @@
   "description": "Web Application for Fitness",
   "main": "server.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
+    "client-install": "npm install --prefix front-end",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
+    "client": "npm start --prefix front-end",
     "dev": "concurrently \"lsof -t -i tcp:5000 | xargs kill -9\" \"npm run server\" \"npm run client\""
   },
   "author": "Huy & Minh Anh",
