--- a/FitApp/front-end/package.json
+++ b/FitApp/front-end/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts"
   },
   "eslintConfig": {
     "extends": "react-app"
